@@ -136,7 +136,8 @@ CONFIG_SDCLONE_DISABLE=y
 # CONFIG_SCHED_WORKQUEUE is not set
 # CONFIG_SCHED_WAITPID is not set
 # CONFIG_SCHED_ATEXIT is not set
-# CONFIG_SCHED_ONEXIT is not set
+CONFIG_SCHED_ONEXIT=y
+CONFIG_SCHED_ONEXIT_MAX=4
 CONFIG_USER_ENTRYPOINT="cxxtest_main"
 CONFIG_DISABLE_OS_API=y
 # CONFIG_DISABLE_CLOCK is not set
